--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="container3">
             <div class="image-passage">
-                <img class="me" src="Images/me.png" width="450" height="450">
+                <img class="me" src="Images/me.PNG" width="450" height="450">
                 <h2>Jaylen Strong</h2>
             </div>
             <div class="jaylen-passage">
