--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="Images/Juzo.jpg">
             <div class="centered-left"><h2>Tokyo Ghoul</h2></div>
         </div>
-        
+        <div class="container">
             <div class="container2">
                 <div class="whatispassage">
                     <h2 class="head2">What is Manga?</h2>
@@ -35,13 +35,14 @@
                     <h2>Vinland Saga</h2>
                 </div>
             </div>
+        </div>
         
 
         <div class="container">
         <img src="Images/Flood.jpg" width="2980" height="2200"><br>
         <div class="centered-right"><h2>Ajin: Demi Human</h2></div>
         </div>
-
+        <div class="container">
         <div class="container3">
             <div class="image-passage">
                 <img class="me" src="Images/Jaylen_Strong.png" width="450" height="450">
@@ -54,6 +55,7 @@
                 <h3 class="head3">Manga Art and Storytelling</h3>
                 <p>Manga art is one of the best forms of art i’ve ever seen. It depends on the mangaka but some panels are so detailed  and provide emotions in ways that anime can’t convey</p>
             </div>
+        </div>
         </div>
 
         <div class="container">
