i dont even know

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="centered-left"><h2>Tokyo Ghoul</h2></div>
         </div>
         <div class="container">
-            <div class="container2">
+            <div class="container2"></div>
                 <div class="whatispassage">
                     <h2 class="head2">What is Manga?</h2>
                     <h3 class="head3"> The official Definition:</h3>
